--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,19 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run: go get -v -t -d ./...
-      - run: go build -v ./...
-      - run: go test -v ./...
+      - run: 
+          name: Build Go Project
+          command: |
+            set -x
+            go build -v ./...
+      - run:
+          name: Install Goveralls
+          command: |
+            set -x
+            go get -u github.com/mattn/goveralls
+      - run:
+          name: Run Tests
+          command: |
+            set -x
+            gotest -v -covermode=count -coverprofile=coverage.out ./...
+            goveralls -coverprofile=coverage.out -service=circle-ci -repotoken ${COVERALLS_TOKEN}
