Added test dependencies

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,10 +28,12 @@ jobs:
             set -x
             go build -v ./...
       - run:
-          name: Install Goveralls
+          name: Install Test Dependencies
           command: |
             set -x
             go get -u github.com/mattn/goveralls
+	    go get -u golang.org/x/tools/cmd/cover
+	    go get -u github.com/rakyll/gotest
       - run:
           name: Run Tests
           command: |
