--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,4 +39,7 @@ jobs:
           command: |
             set -x
             gotest -v -covermode=count -coverprofile=coverage.out ./
-            goveralls -coverprofile=coverage.out -service=circle-ci -repotoken ${COVERALLS_TOKEN}
+
+            if [ -e coverage.out ]; then
+              goveralls -coverprofile=coverage.out -service=circle-ci -repotoken ${COVERALLS_TOKEN}
+            fi
