CircleCI Test Framework (#26)
* Added test dependencies

* Made fixes to config file ot make valid

* Reduced testing to specifically handle one package

* Do not upload to coveralls if no test file output exists

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,13 +28,18 @@ jobs:
             set -x
             go build -v ./...
       - run:
-          name: Install Goveralls
+          name: Install Test Dependencies
           command: |
             set -x
             go get -u github.com/mattn/goveralls
+            go get -u golang.org/x/tools/cmd/cover
+            go get -u github.com/rakyll/gotest
       - run:
           name: Run Tests
           command: |
             set -x
-            gotest -v -covermode=count -coverprofile=coverage.out ./...
-            goveralls -coverprofile=coverage.out -service=circle-ci -repotoken ${COVERALLS_TOKEN}
+            gotest -v -covermode=count -coverprofile=coverage.out ./
+
+            if [ -e coverage.out ]; then
+              goveralls -coverprofile=coverage.out -service=circle-ci -repotoken ${COVERALLS_TOKEN}
+            fi
